# prompt_go

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  main.py  pyproject.toml  requirements.txt
config/: global_config.example.yaml  global_config.yaml  hotkey_mapping.example.yaml  hotkey_mapping.yaml
docs/: CONFIGURATION_EXAMPLES.md  USER_GUIDE.md
modules/: __init__.py  config_manager.py  hotkey_listener.py  model_client.py  performance_optimizer.py  project_initializer.py  streaming_cancellation.py  template_parser.py  text_processor.py
prompt/: README.md  corect_english_grammer.md  grammar_check.md  mermaid.md  summarize.md  tidy_content.md  tidy_content_plain_txt.md  translate.md  translate_plain_txt.md
tasks/: prd-prompt-manager.md  tasks-prd-prompt-manager.md
tests/: test_complete_esc_workflow.py  test_config_manager.py  test_config_reload_demo.py  test_dynamic_mapping.py  test_e2e_performance.py  test_esc_cancellation.py  test_hotkey_listener.py  test_main.py  test_model_client_integration.py  test_text_processor.py
